8324307: [11u] hotspot fails to build with GCC 12 and newer (non-static data member initializers)

Reviewed-by: sgehwolf