src/hotspot/os/linux/cgroupV1Subsystem_linux.hpp
@@ -105,11 +105,11 @@ class CgroupV1Subsystem: public CgroupSubsystem {
 
   private:
     /* controllers */
-    CachingCgroupController* _memory = NULL;
-    CgroupV1Controller* _cpuset = NULL;
-    CachingCgroupController* _cpu = NULL;
-    CgroupV1Controller* _cpuacct = NULL;
-    CgroupV1Controller* _pids = NULL;
+    CachingCgroupController* _memory;
+    CgroupV1Controller* _cpuset;
+    CachingCgroupController* _cpu;
+    CgroupV1Controller* _cpuacct;
+    CgroupV1Controller* _pids;
 
     char * pids_max_val();
 
